Closed Bug 1225365 Opened 9 years ago Closed 9 years ago

"ASSERTION: shared StringBuffer in SizeOfIncludingThisMustBeUnshared"

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla45
Tracking Status
firefox45 --- fixed

People

(Reporter: jruderman, Assigned: n.nethercote)

Details

(Keywords: assertion, testcase)

Attachments

(3 files)

Attached file testcase
1. Load the testcase
2. Quickly click "Measure" in about:memory

###!!! ASSERTION: shared StringBuffer in SizeOfIncludingThisMustBeUnshared: '!IsReadonly()', file xpcom/string/nsSubstring.cpp, line 323
Attached file stack
Flags: needinfo?(n.nethercote)
This fixes the problem for me locally. I don't have a good sense if this key
should be shareable. The reporter was added in bug 807850 and this is the first
sign of a problem with it.
Attachment #8688682 - Flags: review?(bzbarsky)
Assignee: nobody → n.nethercote
Status: NEW → ASSIGNED
Comment on attachment 8688682 [details] [diff] [review]
Fix assertion in the nsScriptNameSpaceManager memory reporter

> I don't have a good sense if this key should be shareable.

It's shareable, for sure.  Object.getOwnPropertyNames(window) will create external JSStrings backed by the same stringbuffers as these keys.  Or enumeration of the window, as in the attached testcase not that I look at it.

r=me
Attachment #8688682 - Flags: review?(bzbarsky) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/86a46ffd473a4597230a1f638a6fa798ec81fdaa
Bug 1225365 - Fix assertion in the nsScriptNameSpaceManager memory reporter. r=bz.
https://hg.mozilla.org/mozilla-central/rev/86a46ffd473a
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
Flags: needinfo?(n.nethercote)
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: