Bug 1225365 - Fix assertion in the nsScriptNameSpaceManager memory reporter. r=bz.

Also, use a fatal assertion in
nsStringBuffer::SizeOfIncludingThisMustBeUnshared().